--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,14 @@
     </style>
 
     <style name="Theme.FinalProjectApartTalk" parent="Base.Theme.FinalProjectApartTalk" />
+
+    <style name="Theme.MyApplicationCheck" parent="Base.Theme.FinalProjectApartTalk" />
+
+    <style name="Base.Theme.ApartTalk" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
 </resources>
