feat : #11 Fragment 생성

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="fourth">#B8D7D5</color>
     <color name="fifth">#E5E5E9</color>
     <color name="sixth">#FF9F5A</color>
+    <color name="lightGray">#D9D9D9</color>
 </resources>
