feat : EntireMenuFragment xml 구현

--- a/app/src/main/res/drawable/icon_reservation.xml
+++ b/app/src/main/res/drawable/icon_reservation.xml
@@ -1,58 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
   <path
-      android:pathData="M198.2,75.2c-0.7,0.7 -1.2,4.3 -1.2,9l0,7.8 -32,-0c-30.5,-0 -32,0.1 -33,1.9 -0.7,1.3 -1,51.7 -1,156l0,154.1 -32.6,0.2c-29.9,0.3 -32.8,0.5 -33.8,2.1 -0.8,1.2 -0.8,2.2 0,3.5 1.1,1.6 11.3,1.7 191.4,1.7 180.1,-0 190.3,-0.1 191.4,-1.8 0.8,-1.2 0.8,-2.2 0,-3.5 -1,-1.5 -3.9,-1.7 -33.8,-2l-32.6,-0.2 0,-154.1c0,-104.3 -0.3,-154.7 -1,-156 -1,-1.8 -2.5,-1.9 -33,-1.9l-31.9,-0 -0.3,-8.1c-0.2,-6.5 -0.7,-8.4 -2,-9.3 -1.3,-0.8 -2.3,-0.8 -3.5,-0 -1.4,0.9 -1.9,2.8 -2.1,9.3l-0.3,8.1 -23.4,-0 -23.4,-0 -0.3,-8.1c-0.2,-6.5 -0.7,-8.4 -2,-9.3 -1.3,-0.8 -2.3,-0.8 -3.5,-0 -1.4,0.9 -1.9,2.8 -2.1,9.3l-0.3,8.1 -23.4,-0 -23.5,-0 0,-7.8c0,-7.9 -0.9,-10.2 -4,-10.2 -0.9,-0 -2.1,0.5 -2.8,1.2zM197,107.9c0,9.1 1.3,11.2 5.5,9.3 2.4,-1.1 2.5,-1.6 2.5,-9.2l0,-8 23.5,-0 23.4,-0 0.3,8.1c0.2,6.5 0.7,8.4 2.1,9.3 1.2,0.8 2.2,0.8 3.5,-0 1.3,-0.9 1.8,-2.8 2,-9.3l0.3,-8.1 23.4,-0 23.4,-0 0.3,8.1c0.2,6.5 0.7,8.4 2.1,9.3 1.2,0.8 2.2,0.8 3.5,-0 1.3,-0.9 1.8,-2.8 2,-9.3l0.3,-8.1 28.9,-0 29,-0 0,152 0,152 -117,-0 -117,-0 0,-152 0,-152 29,-0 29,-0 0,7.9z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M215.2,136.2c-1.6,1.6 -1.5,4.3 0.2,5.7 0.9,0.8 12.6,1 41.1,0.9 36.6,-0.3 39.9,-0.4 40.9,-2.1 0.8,-1.2 0.8,-2.2 0,-3.5 -1,-1.6 -4.3,-1.7 -41,-2 -30.3,-0.2 -40.3,0.1 -41.2,1z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M185.8,160.1c-2.1,1.2 -2.3,4 -0.6,5.7 1.7,1.7 139.9,1.7 141.6,-0 1.8,-1.8 1.4,-4.6 -0.7,-5.8 -2.7,-1.4 -137.9,-1.3 -140.3,0.1z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M200.4,198c-1.6,1 -8.1,7 -14.4,13.4l-11.5,11.6 -5.1,-5.1c-5.8,-5.8 -9.7,-6.5 -10.2,-1.9 -0.2,2.1 1.2,4 7.1,9.8 4.1,4 8.1,7.2 8.8,7.2 0.7,-0 8.1,-6.8 16.6,-15.2 15.6,-15.5 17.6,-18.5 13.5,-20.7 -1.4,-0.7 -2.6,-0.5 -4.8,0.9z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M230.2,199.2c-1.6,1.6 -1.5,4.3 0.2,5.7 0.9,0.8 17.8,1 61.1,0.9 55.7,-0.3 59.9,-0.4 60.9,-2.1 0.8,-1.2 0.8,-2.2 0,-3.5 -1,-1.6 -5.2,-1.7 -61.1,-2 -45.7,-0.2 -60.2,0.1 -61.1,1z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M230.2,224.2c-0.7,0.7 -1.2,1.9 -1.2,2.8 0,3.7 1.8,4 24.5,4 22.2,-0 24.5,-0.3 24.5,-3.6 0,-0.7 -0.7,-2 -1.6,-2.8 -1.3,-1.4 -4.9,-1.6 -23.3,-1.6 -15.5,-0 -22,0.3 -22.9,1.2z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M188.3,278.2l-13.3,13.3 -5.3,-5.3c-2.9,-2.8 -5.9,-5.2 -6.8,-5.2 -2,-0 -3.9,2 -3.9,4 0,2 14,16 16,16 0.9,-0 8.4,-6.9 16.9,-15.4 12.4,-12.4 15.2,-15.7 14.9,-17.7 -0.2,-1.7 -1,-2.5 -2.8,-2.7 -2,-0.2 -5,2.2 -15.7,13z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M230.2,267.2c-1.6,1.6 -1.5,4.3 0.2,5.7 0.9,0.8 17.8,1 61.1,0.9 55.7,-0.3 59.9,-0.4 60.9,-2.1 0.8,-1.2 0.8,-2.2 0,-3.5 -1,-1.6 -5.2,-1.7 -61.1,-2 -45.7,-0.2 -60.2,0.1 -61.1,1z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M230.6,292.3c-1.1,0.8 -1.7,2.3 -1.4,3.8l0.3,2.4 22.9,0.3c23,0.2 25.6,-0.1 25.6,-3.4 0,-0.7 -0.7,-2 -1.6,-2.8 -1.3,-1.4 -4.8,-1.6 -22.8,-1.6 -15.9,-0 -21.7,0.3 -23,1.3z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M188.3,346.2l-13.2,13.2 -5.5,-5.2c-3,-2.9 -6.1,-5.2 -6.8,-5.2 -1.9,-0 -3.8,2 -3.8,4 0,2.1 14,16 16,16 2,-0 32,-30.1 32,-32.1 0,-1.9 -2,-3.9 -4,-3.9 -0.8,-0 -7.4,5.9 -14.7,13.2z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M230.6,335.3c-1.1,0.8 -1.7,2.3 -1.4,3.8l0.3,2.4 61.5,-0 61.5,-0 0.3,-2.4c0.8,-5.1 1.3,-5.1 -61.8,-5.1 -46.7,-0 -59,0.3 -60.4,1.3z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M229.7,360.7c-1.4,1.3 -0.6,5.3 1.2,6.3 1.2,0.6 10.4,1 23,1 17.7,-0 21.2,-0.2 22.5,-1.6 1.9,-1.9 2,-3.6 0.4,-5.2 -1.3,-1.3 -45.9,-1.8 -47.1,-0.5z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M116.8,432.5c-0.8,1.9 -0.8,2.8 0.2,4 1.1,1.3 16.6,1.5 139,1.5 122.4,-0 137.9,-0.2 139,-1.5 1,-1.2 1,-2.1 0.2,-4l-1.2,-2.5 -138,-0 -138,-0 -1.2,2.5z"
-      android:fillColor="@color/third"
-      android:strokeColor="#00000000"/>
+      android:pathData="m787,815 l28,-28 -75,-75v-112h-40v128l87,87ZM200,840q-33,0 -56.5,-23.5T120,760v-560q0,-33 23.5,-56.5T200,120h560q33,0 56.5,23.5T840,200v268q-19,-9 -39,-15.5t-41,-9.5v-243L200,200v560h242q3,22 9.5,42t15.5,38L200,840ZM200,720v40,-560 243,-3 280ZM280,680h163q3,-21 9.5,-41t14.5,-39L280,600v80ZM280,520h244q32,-30 71.5,-50t84.5,-27v-3L280,440v80ZM280,360h400v-80L280,280v80ZM720,920q-83,0 -141.5,-58.5T520,720q0,-83 58.5,-141.5T720,520q83,0 141.5,58.5T920,720q0,83 -58.5,141.5T720,920Z"
+      android:fillColor="@color/third"/>
 </vector>
