--- a/app/src/main/res/layout/fragment_entire_menu.xml
+++ b/app/src/main/res/layout/fragment_entire_menu.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical"
     tools:context=".ui.entiremenu.EntireMenuFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -54,14 +53,317 @@
         app:layout_constraintTop_toBottomOf="@+id/textUserCheckMenu" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageMyPageMenu"
         android:layout_width="38dp"
         android:layout_height="42dp"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="27dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/icon_next"
         app:layout_constraintBottom_toBottomOf="@+id/textAddressMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textNameMenu" />
 
+    <LinearLayout
+        android:id="@+id/LinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/textAddressMenu">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageWriteMenu"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginTop="4dp"
+                android:src="@drawable/icon_writeletter" />
+
+            <TextView
+                android:id="@+id/textWriteMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:gravity="center"
+                android:text="내가쓴글" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageReservationMenu"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:src="@drawable/icon_reservation" />
+
+            <TextView
+                android:id="@+id/textReservationMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:gravity="center"
+                android:text="예약내역" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageServiceMenu"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:src="@drawable/icon_customer_service" />
+
+            <TextView
+                android:id="@+id/textServiceMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:gravity="center"
+                android:text="고객센터" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="5dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/LinearLayout" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/divider"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textExtra"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_bold"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="추가 기능"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+            <Button
+                android:id="@+id/buttonResParkingMenu"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="start|center_vertical"
+                android:text="방문 주차 예약"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/buttonVoteMenu"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="start|center_vertical"
+                android:text="전자 투표"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/buttonFireMenu"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="start|center_vertical"
+                android:text="소방 점검"
+                android:textColor="@color/black" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:id="@+id/textView26"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/notosans_bold"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="아파트"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+            <Button
+                android:id="@+id/buttonContactMenu"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="start|center_horizontal"
+                android:text="관리사무소 문의"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/buttonBroadcastMenu"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="start|center_horizontal"
+                android:text="안내 방송"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/buttonAptSchduleMenu"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="start|center_horizontal"
+                android:text="아파트 일정"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/buttonAptInfoMenu"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="start|center_horizontal"
+                android:text="아파트 운영정보"
+                android:textColor="@color/black" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/lightGray"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageViewLogoMenu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:src="@drawable/image_aparttalk" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="20dp">
+
+                    <TextView
+                        android:id="@+id/textPhoneNumberMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="29dp"
+                        android:fontFamily="@font/notosans_semibold"
+                        android:text="010-0000-0000"
+                        android:textColor="@color/gray" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textViewTimeMenu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="6"
+                            android:text="주중 : 09:00 ~ 20:00"
+                            android:textColor="@color/gray"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:id="@+id/textCompanyInfo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="6"
+                            android:clickable="true"
+                            android:text="회사소개"
+                            android:textColor="#605F5F"
+                            android:textSize="11sp" />
+
+                        <TextView
+                            android:id="@+id/textUseMenu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="6"
+                            android:clickable="true"
+                            android:text="이용약관"
+                            android:textColor="#605F5F"
+                            android:textSize="11sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textTimeWeekendMenu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="주말 : 10:00 ~ 16:00"
+                            android:textColor="@color/gray"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:id="@+id/textUserInfoMenu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:clickable="true"
+                            android:text="개인정보처리방침"
+                            android:textColor="#605F5F"
+                            android:textSize="11sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Copyright © Apart Talk. 2010-2024 All Rights Reserved."
+                            android:textColor="@color/gray"
+                            android:textSize="10sp" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
