--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="fifth">#E5E5E9</color>
     <color name="sixth">#FF9F5A</color>
     <color name="lightGray">#D9D9D9</color>
+    <color name="gray">#777272</color>
 </resources>
