--- a/app/src/main/res/menu/menu_setting.xml
+++ b/app/src/main/res/menu/menu_setting.xml
@@ -6,5 +6,6 @@
         android:id="@+id/item_setting"
         android:icon="@drawable/outline_settings_24"
         android:title="설정"
+        android:visible="true"
         app:showAsAction="always" />
 </menu>
