[feat] #13 CommunityDetailFragment.kt 커뮤니티 상세조회 화면 UI 완성 검색/공지/질문/거래/기타 리스트 UI 수정

--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -30,7 +30,9 @@
                 android:fontFamily="@font/notosans_bold"
                 android:text="커뮤니티"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:includeFontPadding="false"
+                android:layout_gravity="center_vertical"/>
 
         </LinearLayout>
 
