--- a/app/src/main/res/layout/row_community_search.xml
+++ b/app/src/main/res/layout/row_community_search.xml
@@ -41,35 +41,43 @@
                     android:gravity="center"
                     android:text="text"
                     android:textColor="@color/sixth"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:includeFontPadding="false"
+                    android:fontFamily="@font/notosans_semibold"/>
 
                 <TextView
                     android:id="@+id/textViewCommunityListTitleSearch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:fontFamily="@font/notosans_semibold"
                     android:text="text"
                     android:textColor="@color/black"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:includeFontPadding="false"
+                    android:layout_gravity="center_vertical"/>
 
                 <TextView
                     android:id="@+id/textViewCommunityListContentSearch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:minLines="2"
                     android:maxLines="2"
                     android:ellipsize="end"
                     android:fontFamily="@font/notosans_regular"
                     android:text="text"
                     android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:includeFontPadding="false"/>
 
                 <LinearLayout
                     android:id="@+id/linearLayout3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent">
@@ -88,7 +96,9 @@
                         android:layout_height="wrap_content"
                         android:text="text"
                         android:textColor="@color/black"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:includeFontPadding="false"
+                        android:layout_gravity="center_vertical"/>
 
                     <ImageView
                         android:id="@+id/imageViewCommunityListCommentSearch"
@@ -106,7 +116,9 @@
                         android:layout_marginRight="10dp"
                         android:text="text"
                         android:textColor="@color/black"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:includeFontPadding="false"
+                        android:layout_gravity="center_vertical"/>
 
                     <View
                         android:id="@+id/divider"
@@ -121,7 +133,9 @@
                         android:layout_height="wrap_content"
                         android:text="text"
                         android:textColor="@color/black"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:includeFontPadding="false"
+                        android:layout_gravity="center_vertical"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
