--- a/app/src/main/res/layout/fragment_all_location.xml
+++ b/app/src/main/res/layout/fragment_all_location.xml
@@ -9,6 +9,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewAll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp" />
+        android:layout_height="match_parent" />
 </LinearLayout>
