--- a/app/src/main/res/layout/item_all_menu.xml
+++ b/app/src/main/res/layout/item_all_menu.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/textMenuTitleAll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosans_regular"
+        android:fontFamily="@font/notosans_semibold"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
