#15 fix 툴바 텍스트 가운데 정렬

--- a/app/src/main/res/layout/activity_apt_schedule.xml
+++ b/app/src/main/res/layout/activity_apt_schedule.xml
@@ -13,7 +13,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme" >
+
+        <TextView
+            android:id="@+id/textViewToolbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="아파트 일정"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textStyle="bold" />
+
+    </com.google.android.material.appbar.MaterialToolbar>
 
     <CalendarView
         android:id="@+id/calendarViewAptSchedule"
