feat : # 19 Recyclerview 클릭 이벤트 구현

--- a/app/src/main/res/layout/fragment_entire_menu.xml
+++ b/app/src/main/res/layout/fragment_entire_menu.xml
@@ -24,8 +24,8 @@
             android:layout_gravity="center"
             android:fontFamily="@font/notosans_bold"
             android:text="전체"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
+            android:textSize="20sp"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="12dp" />
 
