--- a/app/src/main/res/layout/item_spinner_community_add.xml
+++ b/app/src/main/res/layout/item_spinner_community_add.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:id="@+id/dropDown_item"
+        android:id="@+id/community_add_dropDown_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/box_border"
