--- a/app/src/main/res/layout/fragment_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_f_a_q.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.mypage.FAQFragment">
+    tools:context=".ui.service.FAQFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
