--- a/app/src/main/res/layout/fragment_single_service.xml
+++ b/app/src/main/res/layout/fragment_single_service.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ui.mypage.SingleServiceFragment">
+    tools:context=".ui.service.SingleServiceFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
