#23 feat 소방점검 화면 구현

--- a/app/src/main/res/layout/activity_apt_schedule.xml
+++ b/app/src/main/res/layout/activity_apt_schedule.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     tools:context=".ui.entiremenu.AptSchedule.AptScheduleActivity">
 
@@ -13,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" >
+        android:theme="?attr/actionBarTheme">
 
         <TextView
             android:id="@+id/textViewToolbar"
