#23 feat 소방점검 화면 구현

--- a/app/src/main/res/layout/activity_fire_check.xml
+++ b/app/src/main/res/layout/activity_fire_check.xml
@@ -162,6 +162,11 @@
             android:textColor="#000000"
             android:textSize="14sp" />
 
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 </LinearLayout>
