[feat] #13 CommunityAddImageViewPager2Adapter.kt CommunityDetailImageViewPager2Adapter.kt CommunityDetailCommentRecyclerViewAdapter.kt CommunityModifyImageViewPager2Adapter.kt CommunitySearchRecyclerViewAdapter.kt CommunityTabEtcRecyclerViewAdapter.kt CommunityTabNotificationRecyclerViewAdapter.kt CommunityTabQuestionRecyclerViewAdapter.kt CommunityTabTradeRecyclerViewAdapter.kt 리사이클러 및 뷰페이저 어댑터 분리

--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CommunityActivity">
+    tools:context=".ui.community.activity.CommunityActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/containerCommunity"
