[feat] #28 커뮤니티 툴바 수정 및 홈 화면 UI 중간 저장

--- a/app/src/main/res/layout/fragment_community_modify.xml
+++ b/app/src/main/res/layout/fragment_community_modify.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbarCommunityModify"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
