fix : #25 Spinner로 수정

--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:textColor="@color/black"
     android:background="@color/white"
+    android:fontFamily="@font/notosans_semibold"
     android:padding="14dp">
 
 </TextView>
