--- a/app/src/main/res/layout/activity_fac_reservation.xml
+++ b/app/src/main/res/layout/activity_fac_reservation.xml
@@ -62,23 +62,12 @@
             android:text="서울시 서울구 서울동 100동101호"
             android:textColor="@color/gray" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        <Spinner
+            android:id="@+id/time_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:boxBackgroundColor="@color/white"
-            app:boxStrokeColor="@color/fourth">
-
-
-            <AutoCompleteTextView
-                android:id="@+id/autoCompleteTextview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="none"
-                android:paddingLeft="10dp"
-                android:text="시간을 선택해주세요"/>
-        </com.google.android.material.textfield.TextInputLayout>
+            android:spinnerMode="dropdown"/>
 
     </LinearLayout>
 </LinearLayout>
